Add my pdf resume

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 <table class="imgtable"><tr><td>
 <a href="./"><img src="./files/headshot-cuixin.jpg" alt="" height="200px" /></a>&nbsp;</td>
 <td align="left"><p><font size="4">Xin Cui (崔 欣)</font><br />
-Email-1: xin.cui@intel.com 
+Email-1: xin.cui@intel.com
 <br />
 Email-2: 2019216101@tju.edu.cn
 <br />
 [<a class="p1" href="https://scholar.google.com/citations?hl=en&user=EwhA8I4AAAAJ" target="_blank">Google Scholar</a>] [<a class="p2" href="https://github.com/cuiyixin555" target="_blank">Github</a>]
+[<a class="p3" href="./files/cuixin_new_resume.pdf" target="_blank">My Bilingual Resume</a>]
 </p>
 </td></tr></table>
 
